cdn/ingress/cdn-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cdn-ingress
spec:
  controller: k8s.io/cdn-ingress-nginx
