cdn/ingress/cdn-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn-ingress-controller
  namespace: jiome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdn-ingress-controller
  template:
    metadata:
      labels:
        app: cdn-ingress-controller
    spec:
      containers:
      - name: controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.7.0
        args:
          - /nginx-ingress-controller
          - '--ingress-class=cdn-ingress'
          - '--controller-class=k8s.io/cdn-ingress-nginx'
        ports:
          - containerPort: 80
