cdn/ingress/cdn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-ingress
  namespace: jiome
  annotations:
    kubernetes.io/ingress.class: cdn-ingress
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: cdn-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: varnish-service
            port:
              number: 80
